04 Run experiments: ml-flow.

--- a/04 - Run Experiments.ipynb
+++ b/04 - Run Experiments.ipynb
@@ -488,7 +488,7 @@
     },
     {
      "data": {
-      "application/aml.mini.widget.v1": "{\"status\": \"Completed\", \"workbench_run_details_uri\": \"https://ml.azure.com/runs/mslearn-diabetes_1659988584_d1d09b8f?wsid=/subscriptions/7a907fbb-bf8f-4425-bf79-c0cc424bd07c/resourcegroups/my-ml-res-group/workspaces/jaakko-ml-workspace&tid=f4373477-01e9-4f94-96cc-eacf43688559\", \"run_id\": \"mslearn-diabetes_1659988584_d1d09b8f\", \"run_properties\": {\"run_id\": \"mslearn-diabetes_1659988584_d1d09b8f\", \"created_utc\": \"2022-08-08T19:56:24.969857Z\", \"properties\": {\"_azureml.ComputeTargetType\": \"local\", \"ContentSnapshotId\": \"0379e6c7-e733-4c74-bd5c-945cb1f10181\"}, \"tags\": {\"mlflow.source.type\": \"JOB\", \"mlflow.source.name\": \"diabetes_experiment.py\"}, \"script_name\": null, \"arguments\": null, \"end_time_utc\": \"2022-08-08T19:56:37.696152Z\", \"status\": \"Completed\", \"log_files\": {\"azureml-logs/60_control_log.txt\": \"https://jaakkomlstorage539a1ecda.blob.core.windows.net/azureml/ExperimentRun/dcid.mslearn-diabetes_1659988584_d1d09b8f/azureml-logs/60_control_log.txt?sv=2019-07-07&sr=b&sig=CuUubDFTjG0SJHFBFgBOMBKfgR512gzwduynMJVAUDU%3D&skoid=1421d832-48f9-4a82-92fe-482e6e667dbd&sktid=f4373477-01e9-4f94-96cc-eacf43688559&skt=2022-08-08T19%3A21%3A40Z&ske=2022-08-10T03%3A31%3A40Z&sks=b&skv=2019-07-07&st=2022-08-08T19%3A56%3A58Z&se=2022-08-09T04%3A06%3A58Z&sp=r\", \"azureml-logs/70_driver_log.txt\": \"https://jaakkomlstorage539a1ecda.blob.core.windows.net/azureml/ExperimentRun/dcid.mslearn-diabetes_1659988584_d1d09b8f/azureml-logs/70_driver_log.txt?sv=2019-07-07&sr=b&sig=UxdvX9gqI2ev2lYN%2F0ZjrJXkbnDSrpywp77ClGMu2CI%3D&skoid=1421d832-48f9-4a82-92fe-482e6e667dbd&sktid=f4373477-01e9-4f94-96cc-eacf43688559&skt=2022-08-08T19%3A21%3A40Z&ske=2022-08-10T03%3A31%3A40Z&sks=b&skv=2019-07-07&st=2022-08-08T19%3A56%3A58Z&se=2022-08-09T04%3A06%3A58Z&sp=r\", \"logs/azureml/8_azureml.log\": \"https://jaakkomlstorage539a1ecda.blob.core.windows.net/azureml/ExperimentRun/dcid.mslearn-diabetes_1659988584_d1d09b8f/logs/azureml/8_azureml.log?sv=2019-07-07&sr=b&sig=zMAYCKAp%2FORicCaebBYP%2F%2B13Cq2TD9GnBKWaapp%2BqCw%3D&skoid=1421d832-48f9-4a82-92fe-482e6e667dbd&sktid=f4373477-01e9-4f94-96cc-eacf43688559&skt=2022-08-08T19%3A21%3A40Z&ske=2022-08-10T03%3A31%3A40Z&sks=b&skv=2019-07-07&st=2022-08-08T19%3A56%3A43Z&se=2022-08-09T04%3A06%3A43Z&sp=r\"}, \"log_groups\": [[\"logs/azureml/8_azureml.log\"], [\"azureml-logs/60_control_log.txt\"], [\"azureml-logs/70_driver_log.txt\"]], \"run_duration\": \"0:00:12\", \"run_number\": \"1659988584\", \"run_queued_details\": {\"status\": \"Completed\", \"details\": null}}, \"child_runs\": [], \"children_metrics\": {}, \"run_metrics\": [{\"name\": \"observations\", \"run_id\": \"mslearn-diabetes_1659988584_d1d09b8f\", \"categories\": [0], \"series\": [{\"data\": [10000]}]}, {\"name\": \"Label:0\", \"run_id\": \"mslearn-diabetes_1659988584_d1d09b8f\", \"categories\": [0], \"series\": [{\"data\": [6656]}]}, {\"name\": \"Label:1\", \"run_id\": \"mslearn-diabetes_1659988584_d1d09b8f\", \"categories\": [0], \"series\": [{\"data\": [3344]}]}], \"run_logs\": \"[2022-08-08T19:56:27.228680] Entering context manager injector.\\nCannot provide tracer without any exporter configured.\\n/azureml-envs/azureml_809a074975457de1dd27bdfcf2d79d61/lib/python3.6/site-packages/paramiko/transport.py:33: CryptographyDeprecationWarning: Python 3.6 is no longer supported by the Python core team. Therefore, support for it is deprecated in cryptography and will be removed in a future release.\\n  from cryptography.hazmat.backends import default_backend\\n[2022-08-08T19:56:27.926437] context_manager_injector.py Command line Options: Namespace(inject=['ProjectPythonPath:context_managers.ProjectPythonPath', 'RunHistory:context_managers.RunHistory', 'TrackUserError:context_managers.TrackUserError'], invocation=['diabetes_experiment.py'])\\nScript type = None\\n[2022-08-08T19:56:27.929573] Entering Run History Context Manager.\\n/azureml-envs/azureml_809a074975457de1dd27bdfcf2d79d61/lib/python3.6/site-packages/azureml/history/_tracking.py:186: FutureWarning: MLflow support for Python 3.6 is deprecated and will be dropped in an upcoming release. At that point, existing Python 3.6 workflows that use MLflow will continue to work without modification, but Python 3.6 users will no longer get access to the latest MLflow features and bugfixes. We recommend that you upgrade to Python 3.7 or newer.\\n  import mlflow\\n[2022-08-08T19:56:29.940712] Current directory: /azureml-run\\n[2022-08-08T19:56:29.940768] Preparing to call script [diabetes_experiment.py] with arguments:[]\\n[2022-08-08T19:56:29.940879] After variable expansion, calling script [diabetes_experiment.py] with arguments:[]\\n\\nAnalyzing 10000 rows of data\\n0    6656\\n1    3344\\nName: Diabetic, dtype: int64\\n\\n\\n[2022-08-08T19:56:35.458111] The experiment completed successfully. Finalizing run...\\n[2022-08-08T19:56:35.458130] Start FinalizingInRunHistory\\n[2022-08-08T19:56:35.460732] Logging experiment finalizing status in history service.\\nStarting the daemon thread to refresh tokens in background for process with pid = 8\\nCleaning up all outstanding Run operations, waiting 300.0 seconds\\n2 items cleaning up...\\nCleanup took 0.11269402503967285 seconds\\n[2022-08-08T19:56:36.454642] Finished context manager injector.\\n\\nRun is completed.\", \"graph\": {}, \"widget_settings\": {\"childWidgetDisplay\": \"popup\", \"send_telemetry\": false, \"log_level\": \"INFO\", \"sdk_version\": \"1.42.0\"}, \"loading\": false}"
+      "application/aml.mini.widget.v1": "{\"status\": \"Completed\", \"workbench_run_details_uri\": \"https://ml.azure.com/runs/mslearn-diabetes_1659988584_d1d09b8f?wsid=/subscriptions/7a907fbb-bf8f-4425-bf79-c0cc424bd07c/resourcegroups/my-ml-res-group/workspaces/jaakko-ml-workspace&tid=f4373477-01e9-4f94-96cc-eacf43688559\", \"run_id\": \"mslearn-diabetes_1659988584_d1d09b8f\", \"run_properties\": {\"run_id\": \"mslearn-diabetes_1659988584_d1d09b8f\", \"created_utc\": \"2022-08-08T19:56:24.969857Z\", \"properties\": {\"_azureml.ComputeTargetType\": \"local\", \"ContentSnapshotId\": \"0379e6c7-e733-4c74-bd5c-945cb1f10181\"}, \"tags\": {\"mlflow.source.type\": \"JOB\", \"mlflow.source.name\": \"diabetes_experiment.py\"}, \"script_name\": null, \"arguments\": null, \"end_time_utc\": \"2022-08-08T19:56:37.696152Z\", \"status\": \"Completed\", \"log_files\": {\"azureml-logs/60_control_log.txt\": \"https://jaakkomlstorage539a1ecda.blob.core.windows.net/azureml/ExperimentRun/dcid.mslearn-diabetes_1659988584_d1d09b8f/azureml-logs/60_control_log.txt?sv=2019-07-07&sr=b&sig=xsDvCIXkwGCA7ZEEwIdJgyEGwL4Rk8OxeWQjThe0Rps%3D&skoid=1421d832-48f9-4a82-92fe-482e6e667dbd&sktid=f4373477-01e9-4f94-96cc-eacf43688559&skt=2022-08-08T19%3A21%3A40Z&ske=2022-08-10T03%3A31%3A40Z&sks=b&skv=2019-07-07&st=2022-08-08T20%3A02%3A06Z&se=2022-08-09T04%3A12%3A06Z&sp=r\", \"azureml-logs/70_driver_log.txt\": \"https://jaakkomlstorage539a1ecda.blob.core.windows.net/azureml/ExperimentRun/dcid.mslearn-diabetes_1659988584_d1d09b8f/azureml-logs/70_driver_log.txt?sv=2019-07-07&sr=b&sig=7aTLcSrqKoV%2F%2Btx9bd%2BiLI3TNLD2HVzbcyfVq%2BINsYc%3D&skoid=1421d832-48f9-4a82-92fe-482e6e667dbd&sktid=f4373477-01e9-4f94-96cc-eacf43688559&skt=2022-08-08T19%3A21%3A40Z&ske=2022-08-10T03%3A31%3A40Z&sks=b&skv=2019-07-07&st=2022-08-08T20%3A02%3A06Z&se=2022-08-09T04%3A12%3A06Z&sp=r\", \"logs/azureml/8_azureml.log\": \"https://jaakkomlstorage539a1ecda.blob.core.windows.net/azureml/ExperimentRun/dcid.mslearn-diabetes_1659988584_d1d09b8f/logs/azureml/8_azureml.log?sv=2019-07-07&sr=b&sig=8pRGg8rSv6Dy4ceV3lCP0W%2FtSiGSoDk%2FEWIvlHjhC%2Fs%3D&skoid=1421d832-48f9-4a82-92fe-482e6e667dbd&sktid=f4373477-01e9-4f94-96cc-eacf43688559&skt=2022-08-08T19%3A21%3A40Z&ske=2022-08-10T03%3A31%3A40Z&sks=b&skv=2019-07-07&st=2022-08-08T20%3A01%3A47Z&se=2022-08-09T04%3A11%3A47Z&sp=r\"}, \"log_groups\": [[\"logs/azureml/8_azureml.log\"], [\"azureml-logs/60_control_log.txt\"], [\"azureml-logs/70_driver_log.txt\"]], \"run_duration\": \"0:00:12\", \"run_number\": \"1659988584\", \"run_queued_details\": {\"status\": \"Completed\", \"details\": null}}, \"child_runs\": [], \"children_metrics\": {}, \"run_metrics\": [{\"name\": \"observations\", \"run_id\": \"mslearn-diabetes_1659988584_d1d09b8f\", \"categories\": [0], \"series\": [{\"data\": [10000]}]}, {\"name\": \"Label:0\", \"run_id\": \"mslearn-diabetes_1659988584_d1d09b8f\", \"categories\": [0], \"series\": [{\"data\": [6656]}]}, {\"name\": \"Label:1\", \"run_id\": \"mslearn-diabetes_1659988584_d1d09b8f\", \"categories\": [0], \"series\": [{\"data\": [3344]}]}], \"run_logs\": \"[2022-08-08T19:56:27.228680] Entering context manager injector.\\nCannot provide tracer without any exporter configured.\\n/azureml-envs/azureml_809a074975457de1dd27bdfcf2d79d61/lib/python3.6/site-packages/paramiko/transport.py:33: CryptographyDeprecationWarning: Python 3.6 is no longer supported by the Python core team. Therefore, support for it is deprecated in cryptography and will be removed in a future release.\\n  from cryptography.hazmat.backends import default_backend\\n[2022-08-08T19:56:27.926437] context_manager_injector.py Command line Options: Namespace(inject=['ProjectPythonPath:context_managers.ProjectPythonPath', 'RunHistory:context_managers.RunHistory', 'TrackUserError:context_managers.TrackUserError'], invocation=['diabetes_experiment.py'])\\nScript type = None\\n[2022-08-08T19:56:27.929573] Entering Run History Context Manager.\\n/azureml-envs/azureml_809a074975457de1dd27bdfcf2d79d61/lib/python3.6/site-packages/azureml/history/_tracking.py:186: FutureWarning: MLflow support for Python 3.6 is deprecated and will be dropped in an upcoming release. At that point, existing Python 3.6 workflows that use MLflow will continue to work without modification, but Python 3.6 users will no longer get access to the latest MLflow features and bugfixes. We recommend that you upgrade to Python 3.7 or newer.\\n  import mlflow\\n[2022-08-08T19:56:29.940712] Current directory: /azureml-run\\n[2022-08-08T19:56:29.940768] Preparing to call script [diabetes_experiment.py] with arguments:[]\\n[2022-08-08T19:56:29.940879] After variable expansion, calling script [diabetes_experiment.py] with arguments:[]\\n\\nAnalyzing 10000 rows of data\\n0    6656\\n1    3344\\nName: Diabetic, dtype: int64\\n\\n\\n[2022-08-08T19:56:35.458111] The experiment completed successfully. Finalizing run...\\n[2022-08-08T19:56:35.458130] Start FinalizingInRunHistory\\n[2022-08-08T19:56:35.460732] Logging experiment finalizing status in history service.\\nStarting the daemon thread to refresh tokens in background for process with pid = 8\\nCleaning up all outstanding Run operations, waiting 300.0 seconds\\n2 items cleaning up...\\nCleanup took 0.11269402503967285 seconds\\n[2022-08-08T19:56:36.454642] Finished context manager injector.\\n\\nRun is completed.\", \"graph\": {}, \"widget_settings\": {\"childWidgetDisplay\": \"popup\", \"send_telemetry\": false, \"log_level\": \"INFO\", \"sdk_version\": \"1.42.0\"}, \"loading\": false}"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -898,13 +898,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "gather": {
      "logged": 1649363713535
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: azureml-mlflow\n",
+      "Version: 1.42.0\n",
+      "Summary: Contains the integration code of AzureML with Mlflow.\n",
+      "Home-page: https://docs.microsoft.com/python/api/overview/azure/ml/?view=azure-ml-py\n",
+      "Author: Microsoft Corp\n",
+      "Author-email: None\n",
+      "License: Proprietary https://aka.ms/azureml-preview-sdk-license \n",
+      "Location: /anaconda/envs/azureml_py38/lib/python3.8/site-packages\n",
+      "Requires: azureml-core, mlflow-skinny, jsonpickle\n",
+      "Required-by: azureml-train-automl-runtime\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip show azureml-mlflow"
    ]
@@ -920,13 +938,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "gather": {
      "logged": 1649363717485
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting experiment: mslearn-diabetes-mlflow\n",
+      "Run complete\n"
+     ]
+    }
+   ],
    "source": [
     "from azureml.core import Experiment\n",
     "import pandas as pd\n",
@@ -962,13 +989,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "gather": {
      "logged": 1649363720202
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Get the latest run of the experiment\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m run \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mexperiment\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_runs\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Get logged metrics\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mMetrics:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "# Get the latest run of the experiment\n",
     "run = list(experiment.get_runs())[0]\n",
